contrast bug fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -36,7 +36,7 @@ h1 {
     display: flex;
     text-align: center;
     justify-content: center;
-    color: var(--header-color);
+    color: var(--text-color);
     font-family: 'bebas neue', serif;
     position: absolute;
     top: 20px;
